fix: use job_workflow_sha to download matching script version
The workflow was always downloading the script from main branch,
ignoring the tag being used. Now it downloads the script matching
the workflow's actual ref/SHA.

--- a/.github/workflows/conformance.yml
+++ b/.github/workflows/conformance.yml
@@ -151,8 +151,14 @@ jobs:
 
       - name: Download conformance test script
         run: |
+          # Use the same SHA as this workflow to ensure script version matches
+          SCRIPT_SHA="${{ github.job_workflow_sha }}"
+          if [ -z "$SCRIPT_SHA" ]; then
+            SCRIPT_SHA="main"
+          fi
+          echo "Downloading conformance script at SHA: $SCRIPT_SHA"
           curl -sSL -o /tmp/mcp-conformance-test.sh \
-            https://raw.githubusercontent.com/sammorrowdrums/mcp-conformance-action/main/scripts/conformance-test.sh
+            "https://raw.githubusercontent.com/sammorrowdrums/mcp-conformance-action/${SCRIPT_SHA}/scripts/conformance-test.sh"
           chmod +x /tmp/mcp-conformance-test.sh
 
       - name: Set environment variables
