--- a/action.yml
+++ b/action.yml
@@ -50,8 +50,9 @@ inputs:
 
   # Build configuration
   install_command:
-    description: 'Command to install dependencies'
-    required: true
+    description: 'Command to install dependencies (optional if no install step needed)'
+    required: false
+    default: ''
   build_command:
     description: 'Command to build the MCP server (optional for interpreted languages)'
     required: false
@@ -103,32 +104,32 @@ runs:
     # Optional language setup
     - name: Set up Node.js
       if: inputs.setup_node == 'true'
-      uses: actions/setup-node@v4
+      uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
       with:
         node-version: ${{ inputs.node_version }}
 
     - name: Set up Python
       if: inputs.setup_python == 'true'
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
       with:
         python-version: ${{ inputs.python_version }}
 
     - name: Set up Go
       if: inputs.setup_go == 'true'
-      uses: actions/setup-go@v5
+      uses: actions/setup-go@40f1582b2485089dde7abd97c1529aa768e1baff # v5.6.0
       with:
         go-version: ${{ inputs.go_version || null }}
         go-version-file: ${{ inputs.go_version == '' && 'go.mod' || null }}
 
     - name: Set up Rust
       if: inputs.setup_rust == 'true'
-      uses: dtolnay/rust-toolchain@master
+      uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
       with:
         toolchain: ${{ inputs.rust_toolchain }}
 
     - name: Set up .NET
       if: inputs.setup_dotnet == 'true'
-      uses: actions/setup-dotnet@v4
+      uses: actions/setup-dotnet@67a3573c9a986a3f9c594539f4ab511d57bb3ce9 # v4.3.1
       with:
         dotnet-version: ${{ inputs.dotnet_version }}
 
@@ -218,7 +219,7 @@ runs:
 
     - name: Upload conformance report
       if: always()
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
       with:
         name: conformance-report
         path: conformance-report/
