--- a/action.yml
+++ b/action.yml
@@ -72,7 +72,11 @@ inputs:
     required: false
     default: ''
   configurations:
-    description: 'JSON array of test configurations for multiple transports. Each object: name, transport, start_command, server_url, env_vars'
+    description: 'JSON array of test configurations for multiple transports. Each object: name, transport, start_command, server_url, env_vars, custom_messages'
+    required: false
+    default: ''
+  custom_messages:
+    description: 'JSON array of custom JSON-RPC messages to send. Each object: id (number), name (string), message (JSON-RPC object). Applied to all configurations unless overridden per-config.'
     required: false
     default: ''
 
@@ -158,6 +162,7 @@ runs:
         MCP_TRANSPORT: ${{ inputs.transport }}
         MCP_SERVER_URL: ${{ inputs.server_url }}
         MCP_CONFIGURATIONS: ${{ inputs.configurations }}
+        MCP_CUSTOM_MESSAGES: ${{ inputs.custom_messages }}
         GITHUB_REF: ${{ github.ref }}
       run: |
         set +e
