build: disable inline sourcemaps for deterministic dist
Disable inlineSourceMap and inlineSources in tsconfig.json to prevent
absolute paths from being embedded in dist/index.js. This ensures the
build output is deterministic regardless of the build environment.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "ncc build src/index.ts -o dist --license licenses.txt",
+    "build": "ncc build src/index.ts -o dist --license licenses.txt --no-source-map-register",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
     "format": "prettier --write src/",
